# spellwriters

./: Cargo.toml  README.md
assets/: map
assets/textures/: .chars.kra-autosave.kra  chars.kra  ground_1_spritesheet.ron
config/: display.ron
libspellwriters/: Cargo.toml
spellang/: Cargo.toml
spellang/src/: lib.rs  main.rs  rune.rs  spellparser.rs  spellprocessing.rs
spellwriters/: AreaSpell.gd  AreaSpell.tscn  EntitiesMap.gd  Main.gd  Main.tscn  MainUi.gd  MainUi.tscn  Player.gd  Player.tscn  PlayerState.gd  PlayerState.tscn  Projectile.gd  Projectile.tscn  Spell.gd  Spell.tscn  Spellparser.gdns  TurnQueue.gd  TurnQueue.tscn  World.gd  World.tscn  charset  project.godot
spellwriters/.import/: chars.png-0170f6bd1ae69cf46071fe4c365d0ac8.etc2.texarr  chars.png-0170f6bd1ae69cf46071fe4c365d0ac8.md5  chars.png-0170f6bd1ae69cf46071fe4c365d0ac8.res  chars.png-0170f6bd1ae69cf46071fe4c365d0ac8.s3tc.texarr  chars.png-0170f6bd1ae69cf46071fe4c365d0ac8.stex  fire.png-46253aa924d025661d2d04b935ee14bf.stex  fire.png-467942a7d83184791f30520e57152e08.stex  fire.png-cf9a1bb5bea5e6dabc3d45d7a205c0cf.md5  flame.png-e8294b0bdb4404b302b1aa373665bd06.md5  health_over.png-a29c0e7abb8b3a4f1668408614cb392c.md5  health_over.png-a29c0e7abb8b3a4f1668408614cb392c.stex  health_progress.png-c986ea39798edc628c0b7a0cd2e35533.md5  health_progress.png-c986ea39798edc628c0b7a0cd2e35533.stex  health_under.png-5217ab18f37ad789a6f33f4fa323566a.md5  health_under.png-5217ab18f37ad789a6f33f4fa323566a.stex  (+4 more)
spellwriters/native/: libspellang.gdnlib
src/: arena.rs  character.rs  main.rs  resources.rs
(+12 files in other folders)
