[package]
name = "spellang"
version = "0.1.0"
authors = ["Clement Rebut <clement.rebut@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
    lazy_static = "1.4.0"
    gdnative = "0.9.0-preview.0"
